--- a/public/v2/templates/layout/layout-main_tmpl.hbs
+++ b/public/v2/templates/layout/layout-main_tmpl.hbs
@@ -10,10 +10,10 @@
 
             <div class="nav-collapse collapse">
                 <ul class="nav">
-                    <li class="home-menu active"><a href="#">Home</a></li>
-                    <li class="cust-menu"><a href="#custfield" id="custF">Custom Field</a></li>
-                    <li class="contact-menu"><a href="#contact">Contact</a></li>
-                    <li class="createAccount-menu"><a href="#createAccount">Create Account</a></li>
+                    <li class="home-menu active"><a href="../#">Home</a></li>
+                    <li class="cust-menu"><a href="../#custfield" id="custF">Custom Field</a></li>
+                    <li class="contact-menu"><a href="../#contact">Contact</a></li>
+                    <li class="createAccount-menu"><a href="../#createAccount">Create Account</a></li>
                 </ul>
                 <form class="navbar-search pull-right dropdown">
                     <input id="searchText" type="search" class="search-query dropdown-toggle" placeholder="Search" autocomplete="off">
@@ -39,7 +39,3 @@
     </footer>
 
 </div>
-
-<script type="text/template" id="sample">
-<br />br />br />br />br />br />br />br />text
-</script>
